// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`B2 off: without check_later, exactly as before > create, a far session picked inside 90 days 1`] = `
{
  "answer": {
    "booking_type": "ROUTINE",
    "id": "series-1",
  },
  "booked": [
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-10-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-10-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-10-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-11-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-11-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-11-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-12-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-12-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-12-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-12-30",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-12-30T17:45:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-12-30T17:00:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
  ],
  "released": [],
  "saved": [
    {
      "baselinePriceFils": 10000,
      "branchId": "marina-walk",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "frequency": "monthly",
      "paymentPlan": "pay_at_salon",
      "serviceIds": [
        "haircut-finish",
      ],
      "sessions": [
        {
          "bookingId": "booking-2026-10-06",
          "day": "2026-10-06",
          "index": 0,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": "booking-2026-11-06",
          "day": "2026-11-06",
          "index": 1,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": "booking-2026-12-06",
          "day": "2026-12-06",
          "index": 2,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": "booking-2026-12-30",
          "day": "2026-12-30",
          "index": 3,
          "movedFromDayOfMonth": null,
          "startMin": 1020,
        },
        {
          "bookingId": null,
          "day": "2027-02-06",
          "index": 4,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": null,
          "day": "2027-03-06",
          "index": 5,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
      ],
      "startMin": 990,
      "stylistId": "maya",
    },
  ],
}
`;

exports[`B2 off: without check_later, exactly as before > create, a far session picked past 90 days 1`] = `
{
  "answer": {
    "errors": [
      {
        "code": "invalid_pick",
        "field": "picks[0].date",
        "message": "A pick is a day from today to 90 days ahead.",
      },
    ],
    "status": 422,
  },
  "booked": [],
  "released": [],
  "saved": [],
}
`;

exports[`B2 off: without check_later, exactly as before > create, maya busy on a far day 1`] = `
{
  "answer": {
    "booking_type": "ROUTINE",
    "id": "series-1",
  },
  "booked": [
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-10-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-10-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-10-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-11-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-11-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-11-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-12-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-12-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-12-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
  ],
  "released": [],
  "saved": [
    {
      "baselinePriceFils": 10000,
      "branchId": "marina-walk",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "frequency": "monthly",
      "paymentPlan": "pay_at_salon",
      "serviceIds": [
        "haircut-finish",
      ],
      "sessions": [
        {
          "bookingId": "booking-2026-10-06",
          "day": "2026-10-06",
          "index": 0,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": "booking-2026-11-06",
          "day": "2026-11-06",
          "index": 1,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": "booking-2026-12-06",
          "day": "2026-12-06",
          "index": 2,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": null,
          "day": "2027-01-06",
          "index": 3,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": null,
          "day": "2027-02-06",
          "index": 4,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": null,
          "day": "2027-03-06",
          "index": 5,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
      ],
      "startMin": 990,
      "stylistId": "maya",
    },
  ],
}
`;

exports[`B2 off: without check_later, exactly as before > create, six monthly 1`] = `
{
  "answer": {
    "booking_type": "ROUTINE",
    "id": "series-1",
  },
  "booked": [
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-10-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-10-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-10-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-11-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-11-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-11-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
    {
      "advancePaidAmount": 0,
      "amountWithoutTax": 100,
      "bookingType": "SINGLE",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "date": "2026-12-06",
      "discount": 0,
      "dueAmount": 105,
      "endTime": "2026-12-06T17:15:00+06:00",
      "idempotencyKey": undefined,
      "paymentStatus": "PAY_AFTER_CHECK_IN",
      "products": undefined,
      "promoCode": null,
      "salonId": "marina-walk",
      "services": [
        {
          "amount": 0,
          "id": "haircut-finish",
        },
      ],
      "startTime": "2026-12-06T16:30:00+06:00",
      "status": "BOOKED",
      "stylists": [
        "maya",
      ],
      "taxAmount": 5,
      "total": 105,
    },
  ],
  "released": [],
  "saved": [
    {
      "baselinePriceFils": 10000,
      "branchId": "marina-walk",
      "customerId": "11111111-1111-4111-8111-111111111111",
      "frequency": "monthly",
      "paymentPlan": "pay_at_salon",
      "serviceIds": [
        "haircut-finish",
      ],
      "sessions": [
        {
          "bookingId": "booking-2026-10-06",
          "day": "2026-10-06",
          "index": 0,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": "booking-2026-11-06",
          "day": "2026-11-06",
          "index": 1,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": "booking-2026-12-06",
          "day": "2026-12-06",
          "index": 2,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": null,
          "day": "2027-01-06",
          "index": 3,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": null,
          "day": "2027-02-06",
          "index": 4,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
        {
          "bookingId": null,
          "day": "2027-03-06",
          "index": 5,
          "movedFromDayOfMonth": null,
          "startMin": 990,
        },
      ],
      "startMin": 990,
      "stylistId": "maya",
    },
  ],
}
`;

exports[`B2 off: without check_later, exactly as before > preview, a near session busy on day 89 1`] = `
{
  "answer": {
    "all_free": false,
    "available_times": null,
    "dry_run": true,
    "frequency": "MONTHLY",
    "money": {
      "plans": {
        "PAY_AS_YOU_GO": {
          "amount_without_tax": 400,
          "available": false,
          "discount": 0,
          "pay_now": 84,
          "percent": 20,
          "sessions": [
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
          ],
          "tax_amount": 20,
          "total": 420,
        },
        "PAY_AT_SALON": {
          "amount_without_tax": 400,
          "available": true,
          "discount": 0,
          "pay_now": 0,
          "percent": null,
          "sessions": [
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
          ],
          "tax_amount": 20,
          "total": 420,
        },
        "UPFRONT": {
          "amount_without_tax": 400,
          "available": false,
          "discount": 40,
          "pay_now": 378,
          "percent": 10,
          "sessions": [
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
          ],
          "tax_amount": 18,
          "total": 378,
        },
      },
    },
    "payment_plan": "PAY_AT_SALON",
    "rules": {
      "extend_max": 6,
      "lock_hours": 24,
      "max_future_sessions": 6,
      "max_sessions": 6,
      "min_sessions": 2,
      "misses_to_pause": 2,
      "pause_max_days": 60,
      "reminder_hours": 48,
      "reschedule_within_days": 90,
    },
    "sessions": [
      {
        "alternatives": [],
        "date": "2026-10-29",
        "end_time": "2026-10-29T17:15:00+06:00",
        "free": true,
        "index": 0,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-10-29T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2026-11-29",
        "end_time": "2026-11-29T17:15:00+06:00",
        "free": true,
        "index": 1,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-11-29T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [
          {
            "date": "2026-12-29",
            "start_time": "2026-12-29T16:30:00+06:00",
            "stylist_id": "rana",
            "time": "16:30",
          },
          {
            "date": "2026-12-28",
            "start_time": "2026-12-28T16:30:00+06:00",
            "stylist_id": "maya",
            "time": "16:30",
          },
          {
            "date": "2026-12-30",
            "start_time": "2026-12-30T16:30:00+06:00",
            "stylist_id": "maya",
            "time": "16:30",
          },
        ],
        "date": "2026-12-29",
        "end_time": "2026-12-29T17:15:00+06:00",
        "free": false,
        "index": 2,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-12-29T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2027-01-29",
        "end_time": "2027-01-29T17:15:00+06:00",
        "free": null,
        "index": 3,
        "later": true,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2027-01-29T16:30:00+06:00",
        "stylist_id": "maya",
      },
    ],
    "stylist_id": "maya",
    "time": "16:30",
  },
  "booked": [],
  "released": [],
  "saved": [],
}
`;

exports[`B2 off: without check_later, exactly as before > preview, maya busy on a near day and a far day 1`] = `
{
  "answer": {
    "all_free": false,
    "available_times": null,
    "dry_run": true,
    "frequency": "MONTHLY",
    "money": {
      "plans": {
        "PAY_AS_YOU_GO": {
          "amount_without_tax": 600,
          "available": false,
          "discount": 0,
          "pay_now": 126,
          "percent": 20,
          "sessions": [
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
          ],
          "tax_amount": 30,
          "total": 630,
        },
        "PAY_AT_SALON": {
          "amount_without_tax": 600,
          "available": true,
          "discount": 0,
          "pay_now": 0,
          "percent": null,
          "sessions": [
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
          ],
          "tax_amount": 30,
          "total": 630,
        },
        "UPFRONT": {
          "amount_without_tax": 600,
          "available": false,
          "discount": 60,
          "pay_now": 567,
          "percent": 10,
          "sessions": [
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
          ],
          "tax_amount": 27,
          "total": 567,
        },
      },
    },
    "payment_plan": "PAY_AT_SALON",
    "rules": {
      "extend_max": 6,
      "lock_hours": 24,
      "max_future_sessions": 6,
      "max_sessions": 6,
      "min_sessions": 2,
      "misses_to_pause": 2,
      "pause_max_days": 60,
      "reminder_hours": 48,
      "reschedule_within_days": 90,
    },
    "sessions": [
      {
        "alternatives": [],
        "date": "2026-10-06",
        "end_time": "2026-10-06T17:15:00+06:00",
        "free": true,
        "index": 0,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-10-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [
          {
            "date": "2026-11-06",
            "start_time": "2026-11-06T16:30:00+06:00",
            "stylist_id": "rana",
            "time": "16:30",
          },
          {
            "date": "2026-11-05",
            "start_time": "2026-11-05T16:30:00+06:00",
            "stylist_id": "maya",
            "time": "16:30",
          },
          {
            "date": "2026-11-07",
            "start_time": "2026-11-07T16:30:00+06:00",
            "stylist_id": "maya",
            "time": "16:30",
          },
        ],
        "date": "2026-11-06",
        "end_time": "2026-11-06T17:15:00+06:00",
        "free": false,
        "index": 1,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-11-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2026-12-06",
        "end_time": "2026-12-06T17:15:00+06:00",
        "free": true,
        "index": 2,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-12-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2027-01-06",
        "end_time": "2027-01-06T17:15:00+06:00",
        "free": null,
        "index": 3,
        "later": true,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2027-01-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2027-02-06",
        "end_time": "2027-02-06T17:15:00+06:00",
        "free": null,
        "index": 4,
        "later": true,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2027-02-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2027-03-06",
        "end_time": "2027-03-06T17:15:00+06:00",
        "free": null,
        "index": 5,
        "later": true,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2027-03-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
    ],
    "stylist_id": "maya",
    "time": "16:30",
  },
  "booked": [],
  "released": [],
  "saved": [],
}
`;

exports[`B2 off: without check_later, exactly as before > preview, six monthly 1`] = `
{
  "answer": {
    "all_free": true,
    "available_times": null,
    "dry_run": true,
    "frequency": "MONTHLY",
    "money": {
      "plans": {
        "PAY_AS_YOU_GO": {
          "amount_without_tax": 600,
          "available": false,
          "discount": 0,
          "pay_now": 126,
          "percent": 20,
          "sessions": [
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
            {
              "at_visit": 84,
              "pay_now": 21,
              "total": 105,
            },
          ],
          "tax_amount": 30,
          "total": 630,
        },
        "PAY_AT_SALON": {
          "amount_without_tax": 600,
          "available": true,
          "discount": 0,
          "pay_now": 0,
          "percent": null,
          "sessions": [
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
            {
              "at_visit": 105,
              "pay_now": 0,
              "total": 105,
            },
          ],
          "tax_amount": 30,
          "total": 630,
        },
        "UPFRONT": {
          "amount_without_tax": 600,
          "available": false,
          "discount": 60,
          "pay_now": 567,
          "percent": 10,
          "sessions": [
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
            {
              "at_visit": 0,
              "pay_now": 94.5,
              "total": 94.5,
            },
          ],
          "tax_amount": 27,
          "total": 567,
        },
      },
    },
    "payment_plan": "PAY_AT_SALON",
    "rules": {
      "extend_max": 6,
      "lock_hours": 24,
      "max_future_sessions": 6,
      "max_sessions": 6,
      "min_sessions": 2,
      "misses_to_pause": 2,
      "pause_max_days": 60,
      "reminder_hours": 48,
      "reschedule_within_days": 90,
    },
    "sessions": [
      {
        "alternatives": [],
        "date": "2026-10-06",
        "end_time": "2026-10-06T17:15:00+06:00",
        "free": true,
        "index": 0,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-10-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2026-11-06",
        "end_time": "2026-11-06T17:15:00+06:00",
        "free": true,
        "index": 1,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-11-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2026-12-06",
        "end_time": "2026-12-06T17:15:00+06:00",
        "free": true,
        "index": 2,
        "later": false,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2026-12-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2027-01-06",
        "end_time": "2027-01-06T17:15:00+06:00",
        "free": null,
        "index": 3,
        "later": true,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2027-01-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2027-02-06",
        "end_time": "2027-02-06T17:15:00+06:00",
        "free": null,
        "index": 4,
        "later": true,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2027-02-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
      {
        "alternatives": [],
        "date": "2027-03-06",
        "end_time": "2027-03-06T17:15:00+06:00",
        "free": null,
        "index": 5,
        "later": true,
        "moved_from_day_of_month": null,
        "picked": false,
        "start_time": "2027-03-06T16:30:00+06:00",
        "stylist_id": "maya",
      },
    ],
    "stylist_id": "maya",
    "time": "16:30",
  },
  "booked": [],
  "released": [],
  "saved": [],
}
`;
